# purple-terminal-bench

./: README.md  amber-manifest.json5  pyproject.toml
scripts/: fake_green.py
src/: agent.py
